// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute with multiple races should return error 1`] = `
Object {
  "error": Object {
    "message": "We don't support finding the winner from multiple races",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute with national level response should return success 1`] = `
Object {
  "data": Object {
    "electionDate": "2021-06-08",
    "nextrequest": "https://api.ap.org/v2/elections/2021-06-08?format=json&level=state&officeid=A&racetypeid=D&resultstype=l&statepostal=VA&winner=X&minDateTime=2021-06-09T20%3a35%3a40.840Z",
    "races": Array [
      Object {
        "officeID": "P",
        "officeName": "President",
        "raceID": "0",
        "raceType": "General",
        "raceTypeID": "G",
        "reportingUnits": Array [
          Object {
            "candidates": Array [
              Object {
                "ballotOrder": 1,
                "candidateID": "51896",
                "first": "Donald",
                "incumbent": true,
                "last": "Trump",
                "party": "Rep",
                "polID": "0",
                "polNum": "49353",
                "voteCount": 280076,
              },
              Object {
                "ballotOrder": 2,
                "candidateID": "52107",
                "first": "Joe",
                "last": "Biden",
                "party": "Dem",
                "polID": "0",
                "polNum": "49500",
                "voteCount": 271187,
                "winner": "X",
              },
            ],
            "lastUpdated": "2021-06-09T20:35:40.840Z",
            "level": "national",
            "precinctsReporting": 2584,
            "precinctsReportingPct": 100,
            "precinctsTotal": 2584,
            "stateName": "United States",
            "statePostal": "US",
          },
          Object {
            "candidates": Array [
              Object {
                "ballotOrder": 1,
                "candidateID": "51896",
                "first": "Donald",
                "incumbent": true,
                "last": "Trump",
                "party": "Rep",
                "polID": "0",
                "polNum": "49353",
                "voteCount": 10000,
                "winner": "X",
              },
              Object {
                "ballotOrder": 2,
                "candidateID": "52107",
                "first": "Joe",
                "last": "Biden",
                "party": "Dem",
                "polID": "0",
                "polNum": "49500",
                "voteCount": 8000,
              },
            ],
            "lastUpdated": "2021-06-09T20:35:40.840Z",
            "level": "state",
            "precinctsReporting": 2584,
            "precinctsReportingPct": 100,
            "precinctsTotal": 2584,
            "stateName": "Virginia",
            "statePostal": "VA",
          },
        ],
        "resultsType": "live",
        "test": false,
      },
    ],
    "result": "271187,Biden",
    "timestamp": "2021-10-12T15:41:05.383Z",
  },
  "jobRunID": "1",
  "result": "271187,Biden",
  "statusCode": 200,
}
`;

exports[`execute with no races should return error 1`] = `
Object {
  "error": Object {
    "message": "We could not find any races",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 500,
}
`;

exports[`execute with response having both state and disrict reporting units should return success 1`] = `
Object {
  "data": Object {
    "electionDate": "2021-06-08",
    "nextrequest": "https://api.ap.org/v2/elections/2021-06-08?format=json&level=state&officeid=A&racetypeid=D&resultstype=l&statepostal=VA&winner=X&minDateTime=2021-06-09T20%3a35%3a40.840Z",
    "races": Array [
      Object {
        "officeID": "A",
        "officeName": "Attorney General",
        "party": "Dem",
        "raceID": "47227",
        "raceType": "Primary",
        "raceTypeID": "D",
        "reportingUnits": Array [
          Object {
            "candidates": Array [
              Object {
                "ballotOrder": 1,
                "candidateID": "51896",
                "first": "Mark",
                "incumbent": true,
                "last": "Herring",
                "party": "Dem",
                "polID": "0",
                "polNum": "49353",
                "voteCount": 271187,
                "winner": "X",
              },
              Object {
                "ballotOrder": 2,
                "candidateID": "52107",
                "first": "Jerrauld",
                "last": "Jones",
                "party": "Dem",
                "polID": "0",
                "polNum": "49500",
                "voteCount": 207792,
              },
            ],
            "lastUpdated": "2021-06-09T20:35:40.840Z",
            "level": "state",
            "precinctsReporting": 2584,
            "precinctsReportingPct": 100,
            "precinctsTotal": 2584,
            "stateName": "Virginia",
            "statePostal": "VA",
          },
          Object {
            "candidates": Array [
              Object {
                "ballotOrder": 1,
                "candidateID": "51896",
                "first": "Mark",
                "incumbent": true,
                "last": "Herring",
                "party": "Dem",
                "polID": "0",
                "polNum": "49353",
                "voteCount": 500,
                "winner": "X",
              },
              Object {
                "ballotOrder": 2,
                "candidateID": "52107",
                "first": "Jerrauld",
                "last": "Jones",
                "party": "Dem",
                "polID": "0",
                "polNum": "49500",
                "voteCount": 200,
              },
            ],
            "lastUpdated": "2021-06-09T20:35:40.840Z",
            "level": "district",
            "precinctsReporting": 2584,
            "precinctsReportingPct": 100,
            "precinctsTotal": 2584,
            "stateName": "Virginia",
            "statePostal": "VA",
          },
        ],
        "resultsType": "live",
        "test": false,
      },
    ],
    "result": "271187,Herring",
    "timestamp": "2021-10-12T15:41:05.383Z",
  },
  "jobRunID": "1",
  "result": "271187,Herring",
  "statusCode": 200,
}
`;

exports[`execute with state level response should return success 1`] = `
Object {
  "data": Object {
    "electionDate": "2021-06-08",
    "nextrequest": "https://api.ap.org/v2/elections/2021-06-08?format=json&level=state&officeid=A&racetypeid=D&resultstype=l&statepostal=VA&winner=X&minDateTime=2021-06-09T20%3a35%3a40.840Z",
    "races": Array [
      Object {
        "officeID": "A",
        "officeName": "Attorney General",
        "party": "Dem",
        "raceID": "47227",
        "raceType": "Primary",
        "raceTypeID": "D",
        "reportingUnits": Array [
          Object {
            "candidates": Array [
              Object {
                "ballotOrder": 1,
                "candidateID": "51896",
                "first": "Mark",
                "incumbent": true,
                "last": "Herring",
                "party": "Dem",
                "polID": "0",
                "polNum": "49353",
                "voteCount": 271187,
                "winner": "X",
              },
              Object {
                "ballotOrder": 2,
                "candidateID": "52107",
                "first": "Jerrauld",
                "last": "Jones",
                "party": "Dem",
                "polID": "0",
                "polNum": "49500",
                "voteCount": 207792,
              },
            ],
            "lastUpdated": "2021-06-09T20:35:40.840Z",
            "level": "state",
            "precinctsReporting": 2584,
            "precinctsReportingPct": 100,
            "precinctsTotal": 2584,
            "stateName": "Virginia",
            "statePostal": "VA",
          },
        ],
        "resultsType": "live",
        "test": false,
      },
    ],
    "result": "271187,Herring",
    "timestamp": "2021-10-12T15:41:05.383Z",
  },
  "jobRunID": "1",
  "result": "271187,Herring",
  "statusCode": 200,
}
`;
